--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
-    "@mui/styles": "^5.15.16",
     "@mui/x-data-grid": "^7.3.2",
     "@nivo/bar": "^0.86.0",
     "@nivo/core": "^0.86.0",
@@ -32,6 +31,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
