--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,10 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
+    "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "react": "^18.3.1",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.3.1",
